--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <div class="col">
                 <div class="row  mt-3">
                     <div class="col text-center">
-                        <h2>uRecommend<br></h2>
-						<h1>Currently Playing:</h1>
-                        <div class="d-flex flex-column align-items-center">
-                            <img id="albumImage" src="">
-							<div id="progress-bar-container">
-								<div id="progress-bar"></div>
+							<img id="headerLogo"src="/uRecommend_logo_tightcrop.jpg">
+							<h1>Currently Playing:</h1>
+                        	<div class="d-flex flex-column align-items-center">
+                        	    <img id="albumImage" src="">
+								<div id="progress-bar-container">
+									<div id="progress-bar"></div>
+								</div>
+                        	    <div id="trackTitle"></div>
+                        	    <div id="trackArtist"></div>
 							</div>
-                            <div id="trackTitle"></div>
-                            <div id="trackArtist"></div>
-                        </div>
                         <input type="button" class="btn btn-primary btn-sm mt-3" onclick="currentlyPlaying(); nextFourSongs();" value="Refresh Currently Playing">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songOneToQueue(); reshuffleSongs();" value="Song One To Queue">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songTwoToQueue(); reshuffleSongs();" value="Song Two To Queue">
@@ -52,27 +52,27 @@
 			<div class="col text-center">
 				<h1><br>What should we play next?<br>CAST YOUR VOTE!</h1>
 			</div>
-			<div class="container">
+			<div class="containerTwo">
 				<div>
-					<button class="button blue" onclick="voteForBlue()">
+					<button id="blueButt" class="button blue" onclick="voteForBlue()">
 					<img id="songOneImage"src="">
 					<div id="songOneTitle"></div>
 					<div id="songOneArtist"></div>
 				</div>
 				<div>
-					<button class="button yellow" onclick="voteForYellow()">
+					<button id="yellowButt" class="button yellow" onclick="voteForYellow()">
 					<img id="songTwoImage"src="">
 					<div id="songTwoTitle"></div>
 					<div id="songTwoArtist"></div>
 				</div>
 				<div>
-					<button class="button red" onclick="voteForRed()">
+					<button id="redButt" class="button red" onclick="voteForRed()">
 					<img id="songThreeImage"src="">
 					<div id="songThreeTitle"></div>
 					<div id="songThreeArtist"></div>
 				</div>
 				<div>
-					<button class="button purple" onclick="voteForPurple()">
+					<button id="purpleButt" class="button purple" onclick="voteForPurple()">
 					<img id="songFourImage"src="">
 					<div id="songFourTitle"></div>
 					<div id="songFourArtist"></div>
