added a testing/makeshift admin password field

--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
 
 <body onload="onPageLoad()">
     <div class="container">
-        <div id="tokenSection" class="row">
-            <div class="col">
-                <div class="mb-3">
-                    <label for="clientId" class="form-label">Client ID</label>
-                    <input type="text" class="form-control" id="clientId" placeholder="">
-                </div>
-                <div class="mb-3">
-                    <label for="clientSecret" class="form-label">Client Secret</label>
-                    <input type="text" class="form-control" id="clientSecret" placeholder="">
-                </div>
-                <input class="btn btn-primary btn-lg" type="button" onclick="requestAuthorization()" value="Request Authorization"><br/>
-            </div>
-        </div>
+        <div id="tokenSection" class="col text-center">
+			<h1>Admin must re-verify hosting account...</h1>
+            <label for="adminPassword" class="form-label">Admin Password</label>
+            <input type="password" class="form-control" id="adminPassword" placeholder="">
+            <input class="btn btn-primary btn-lg" type="button" onclick="requestAuthorization()" value="Request Authorization"><br/>
+		</div>
 
         <div id="currentPollSection" class="row">
             <div class="col">
