added firebase database connection and admin password

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uRecommend</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
-    <script src="app.js"></script>
 </head>
-
 <body onload="onPageLoad()">
     <div class="container">
         <div id="tokenSection" class="col text-center">
@@ -33,12 +30,14 @@
                         	    <div id="trackTitle"></div>
                         	    <div id="trackArtist"></div>
 							</div>
+							<!--
                         <input type="button" class="btn btn-primary btn-sm mt-3" onclick="currentlyPlaying(); nextFourSongs();" value="Refresh Currently Playing">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songOneToQueue(); reshuffleSongs();" value="Song One To Queue">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songTwoToQueue(); reshuffleSongs();" value="Song Two To Queue">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songThreeToQueue(); reshuffleSongs();" value="Song Three To Queue">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songFourToQueue(); reshuffleSongs();" value="Song Four To Queue">
 						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="reshuffleSongs();" value="Reshuffle Songs">
+						-->
 					</div>
                 </div>
             </div>
@@ -47,25 +46,25 @@
 			</div>
 			<div class="containerTwo">
 				<div>
-					<button id="blueButt" class="button blue" onclick="voteForBlue()">
+					<button id="blueButt" class="button blue" onclick="voteForBlue();">
 					<img id="songOneImage"src="">
 					<div id="songOneTitle"></div>
 					<div id="songOneArtist"></div>
 				</div>
 				<div>
-					<button id="yellowButt" class="button yellow" onclick="voteForYellow()">
+					<button id="yellowButt" class="button yellow" onclick="voteForYellow();">
 					<img id="songTwoImage"src="">
 					<div id="songTwoTitle"></div>
 					<div id="songTwoArtist"></div>
 				</div>
 				<div>
-					<button id="redButt" class="button red" onclick="voteForRed()">
+					<button id="redButt" class="button red" onclick="voteForRed();">
 					<img id="songThreeImage"src="">
 					<div id="songThreeTitle"></div>
 					<div id="songThreeArtist"></div>
 				</div>
 				<div>
-					<button id="purpleButt" class="button purple" onclick="voteForPurple()">
+					<button id="purpleButt" class="button purple" onclick="voteForPurple();">
 					<img id="songFourImage"src="">
 					<div id="songFourTitle"></div>
 					<div id="songFourArtist"></div>
@@ -73,8 +72,12 @@
 			</div>
         </div>
     </div>
-
-
+	<!--
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.20.0/firebase-database.js"></script>
+	-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+	<script src="./app.js"></script>
 </body>
 
 </html>
