changed font color to fix mobile device differences

--- a/adminPage.html
+++ b/adminPage.html
@@ -23,7 +23,7 @@
 						<a href="index.html">
 							<img id="headerLogo"src="/uRecommend_logo_tightcrop.jpg">
 						</a>
-							<h1>[[ADMIN]] Currently Playing:</h1>
+							<h1>ADMIN Currently HOSTING:</h1>
                         	<div class="d-flex flex-column align-items-center">
                         	    <img id="albumImage" src="">
 								<div id="progress-bar-container">
@@ -32,14 +32,6 @@
                         	    <div id="trackTitle"></div>
                         	    <div id="trackArtist"></div>
 							</div>
-							<!--
-                        <input type="button" class="btn btn-primary btn-sm mt-3" onclick="currentlyPlaying(); nextFourSongs();" value="Refresh Currently Playing">
-						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songOneToQueue(); reshuffleSongs();" value="Song One To Queue">
-						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songTwoToQueue(); reshuffleSongs();" value="Song Two To Queue">
-						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songThreeToQueue(); reshuffleSongs();" value="Song Three To Queue">
-						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="songFourToQueue(); reshuffleSongs();" value="Song Four To Queue">
-						<input type="button" class="btn btn-primary btn-sm mt-3" onclick="reshuffleSongs();" value="Reshuffle Songs">
-						-->
 					</div>
                 </div>
             </div>
