re-added new live vote counts

--- a/index.html
+++ b/index.html
@@ -44,24 +44,28 @@
 					<img id="songOneImage"src="">
 					<div id="songOneTitle"></div>
 					<div id="songOneArtist"></div>
+					<b><div id="songOneVotes"></div></b>
 				</div>
 				<div>
 					<button id="yellowButt" class="button yellow" onclick="">
 					<img id="songTwoImage"src="">
 					<div id="songTwoTitle"></div>
 					<div id="songTwoArtist"></div>
+					<b><div id="songTwoVotes"></div></b>
 				</div>
 				<div>
 					<button id="redButt" class="button red" onclick="">
 					<img id="songThreeImage"src="">
 					<div id="songThreeTitle"></div>
 					<div id="songThreeArtist"></div>
+					<b><div id="songThreeVotes"></div></b>
 				</div>
 				<div>
 					<button id="purpleButt" class="button purple" onclick="">
 					<img id="songFourImage"src="">
 					<div id="songFourTitle"></div>
 					<div id="songFourArtist"></div>
+					<b><div id="songFourVotes"></div></b>
 				</div>
 			</div>
 			<div class="col text-center">
